--- a/package.json
+++ b/package.json
@@ -21,10 +21,15 @@
     "eslint-plugin-import": "^2.23.4",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "sass": "^1.36.0",
+    "sass-loader": "^7.3.1",
     "style-loader": "^3.0.0",
-    "webpack": "^5.42.0",
+    "webpack": "^5.47.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.8.0"
+  },
+  "dependencies": {
+    "regenerator-runtime": "^0.13.7"
   }
 }
